# py_gf_auto_doc

./: .gitignore  .pylintrc  NEWS.md  README.md  pyproject.toml
src/py_gf_auto_doc/: __main__.py  doc_gen.py
src/py_gf_auto_doc/templates/: class.txt  file.txt  func.txt
